Fix image source extension in ResumeReviewer.html

--- a/ResumeReviewer.html
+++ b/ResumeReviewer.html
@@ -1,7 +1,7 @@
 head>
   <title>Rosetta Resume Reviewer</title>
 </head>
-<img src="/images/resumeicon.jpeg" alt="Rosetta Resume Reviewer Icon">
+<img src="/images/resumeicon.jpg" alt="Rosetta Resume Reviewer Icon">
 <body>
     <h2>Welcome to Resume Reviewer!  </h2>
     <p>A seamless way to filter and rank 100s of resumes for specified job or internship positions.</p>
