--- a/ResumeReviewer.html
+++ b/ResumeReviewer.html
@@ -1,4 +1,6 @@
-head>
+<!DOCTYPE html>
+<link rel="icon" href="data:,">
+<head>
   <title>Rosetta Resume Reviewer</title>
 </head>
 <img src="/images/resumeicon.jpg" alt="Rosetta Resume Reviewer Icon">
