--- a/index.html
+++ b/index.html
@@ -1,25 +1,75 @@
 <!DOCTYPE html>
-<link rel="icon" href="data:,">
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Rosetta Resume Reviewer</title>
+  <link rel="icon" href="data:,">
+  <style>
+    /* Overall page styling */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #d9f7f2, #b3e5fc); /* soft blue-green gradient */
+      color: #333;
+      text-align: center;
+      padding: 50px;
+      margin: 0;
+    }
+
+    /* Container for content */
+    .container {
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      display: inline-block;
+      padding: 40px 60px;
+      max-width: 700px;
+    }
+
+    /* Header */
+    h2 {
+      color: #00796b; /* teal accent */
+      margin-bottom: 20px;
+    }
+
+    /* Paragraph styling */
+    p {
+      font-size: 1.1em;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+
+    /* Image styling */
+    img {
+      width: 100px;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
-<img src="/images/resumeicon.jpg" alt="Rosetta Resume Reviewer Icon">
 <body>
-    <h2>Welcome to Resume Reviewer!  </h2>
-    <p>A seamless way to filter and rank 100s of resumes for specified job or internship positions.</p>
-    <p>Talk to Rosetta, the chat bot, to get started today!.</p>
+  <div class="container">
+    <img src="/images/resumeicon.jpg" alt="Rosetta Resume Reviewer Icon">
+    <h2>Welcome to Resume Reviewer!</h2>
+    <p>A seamless way to filter and rank hundreds of resumes for specified job or internship positions.</p>
+    <p>Talk to <strong>Rosetta</strong>, the chatbot, to get started today!</p>
+  </div>
+
+  <script>
+    window.watsonAssistantChatOptions = {
+      integrationID: "d05cd33b-253d-4db5-9731-02aa551afed6", // The ID of this integration.
+      region: "us-south", // The region your integration is hosted in.
+      serviceInstanceID: "4c433574-229a-4f85-a0fc-fb31a4216402", // The ID of your service instance.
+      onLoad: async (instance) => { await instance.render(); }
+    };
+    setTimeout(function(){
+      const t=document.createElement('script');
+      t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + 
+      (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+      document.head.appendChild(t);
+    });
+  </script>
 </body>
-<script>
-  window.watsonAssistantChatOptions = {
-    integrationID: "d05cd33b-253d-4db5-9731-02aa551afed6", // The ID of this integration.
-    region: "us-south", // The region your integration is hosted in.
-    serviceInstanceID: "4c433574-229a-4f85-a0fc-fb31a4216402", // The ID of your service instance.
-    onLoad: async (instance) => { await instance.render(); }
-  };
-  setTimeout(function(){
-    const t=document.createElement('script');
-    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
-    document.head.appendChild(t);
-  });
-</script>
 </html>
+
