--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="/images/resumeicon.jpg" alt="Rosetta Resume Reviewer Icon">
+    <img src="images/resumeicon.jpg" alt="Rosetta Resume Reviewer Icon">
     <h2>Welcome to Resume Reviewer!</h2>
     <p>A seamless way to filter and rank hundreds of resumes for specified job or internship positions.</p>
     <p>Talk to <strong>Rosetta</strong>, the chatbot, to get started today!</p>
